improvement: listing and get now filters by test mode #4
