# functions/src/controllers/MerchantsController.ts
@@ -1,20 +1,31 @@
 // import {Controller, Get, Request, Route, Security} from "tsoa";
 // import {  MerchantOutput, MerchantService} from "../models/Merchant";
 import {Body, Controller, Get, Post, Request, Route, Security} from "tsoa";
-import {MerchantInput, MerchantOutput, MerchantService} from "../models/Merchant";
+import {MerchantInput, MerchantOutput, MerchantOutputInstance, MerchantService} from "../models/Merchant";
 import {authResult} from "../auth/authentication";
+import * as _ from "lodash";
+import {ErrorHttp} from "../exceptions/ErrorHttp";
 
 @Security('api_key')
 @Route('merchants')
 export class MerchantsController extends Controller {
   @Get()
-  public async getMerchants(): Promise<Array<MerchantOutput>> {
-    return await MerchantService.getRepository().find();
+  public async getMerchants(@Request() req:any): Promise<Array<Partial<MerchantOutputInstance>>> {
+    const authResultUser: authResult = req.user;
+    const result = await MerchantService.getRepository().whereEqualTo(m => m.testMode, authResultUser.testMode).find();
+    return result.map(merchant => merchant.asOutput());
+    // const toReturn = [];
+    // result.forEach()
   }
 
   @Get('{drveUid}')
-  public async getMerchant(drveUid: string): Promise<MerchantOutput> {
-    return await MerchantService.getRepository().findById(drveUid);
+  public async getMerchant(@Request() req: any, drveUid: string): Promise<Partial<MerchantOutput>> {
+    const authResultUser: authResult = req.user;
+    const foundMerchant = await MerchantService.getRepository().findById(drveUid);
+    if(foundMerchant == undefined || foundMerchant.testMode != authResultUser.testMode) {
+      throw new ErrorHttp(`Merchant not found id: ${drveUid} - testMode: ${authResultUser.testMode}`, 404)
+    }
+    return foundMerchant.asOutput();
   }
   @Post()
   public async createMerchant(@Body() merchantInput: MerchantInput,
@@ -37,8 +48,8 @@ export class MerchantsCreateController extends Controller {
     let merchantsCreated = 0;
     if (existingMerchants.length == 0) {
       console.log('adding data to MerchantPartner')
-      for (let i = 0; i < 3; i++) {
-         await MerchantService.create(true,{
+      for (let i = 0; i < 4; i++) {
+         await MerchantService.create(i != 3,{
           drveUid: `driveUidA${i}`,
           shopifyDomain: `exampledomain-${i}.myshopify.com`,
           commissionPercentage: i*2.5,
